feat: implement least-connections fallback for placement degraded mode (PIL-24)